# suhba

./: .cfignore  .python-version  DEPLOYMENT_VERIFICATION.md  SERVER_README.md  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.js  wrangler.toml
data/: almuyassar-ghareeb.json  maqasid.txt  quran.txt
database_schema/: suhba_er_diagram.md
server/: app.py  quizzes.py
src/: app.css  app.html
src/lib/: gameContent.ts  pwa.ts
src/lib/components/: AuthModal.svelte  Button.svelte  ConnectionStatus.svelte  DawahChallenge.svelte  EnhancedConnectionStatus.svelte  HadithCompletion.svelte  InstallPrompt.svelte  LastScholarStanding.svelte  LightningIjaza.svelte  MeccanMedinanGame.svelte  RealTimeGameRoom.svelte  SalahTimer.svelte  SeerahTrip.svelte  SettingsModal.svelte  SuhbaLogo.svelte  Toast.svelte  ToastContainer.svelte  UserGlasses.svelte  UserKeffiyeh.svelte  UserShmagh.svelte
src/lib/database/: islamicContent.ts  schema.ts
src/lib/games/fiqhMaster/: index.ts
src/lib/games/imanDefender/: index.ts
src/lib/games/wisdomSeeker/: index.ts
src/lib/services/: contentService.ts
src/lib/stores/: enhancedWebsocket.ts  language.ts  salah.ts  toast.ts  translations.ts  websocket.ts
src/routes/: +layout.svelte  +page.svelte
static/: manifest.json  sw.js
