[tool.poetry]
authors = []
description = ""
name = "quiz"
version = "0.0.1"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
gunicorn = "^22.0.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
python-multipart = "^0.0.9"
regex = "^2024.5.15"
sentry-sdk = "^2.7.1"
uvicorn = "^0.30.1"
geoip2 = "^4.8.0"
country-emoji = "^0.0.1"
emoji-country-flag = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
rich = "^13.7.1"
ruff = "^0.5.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.ruff]
line-length = 120
target-version = "py312"
fix = true

[tool.ruff.lint]
ignore = [
  "ERA001", # Found commented-out code
  "G004", # Logging statement uses f-string
  "E731", # Do not assign a lambda expression, use a def
]

[tool.ruff.format]
quote-style = "single"
